CHANGELOG RoundCube Webmail
---------------------------

2009/02/27 (thomasb)
----------
- Fix mime-type detection using a hard-coded map (#1485311)
- Don't return empty string if charset conversion failed (#1485757)

2009/02/26 (alec)
----------
- Fix new lines stripped from message footer (#1485751)

2009/02/24 (alec)
----------
- Fix IE problem with mouse click autocomplete (#1485739)

2009/02/18 (alec)
----------
- Fix html body washing on reply/forward + fix attachments handling (#1485676)

2009/02/13 (alec)
----------
- Fix multiple recipients input parsing (#1485733)
- Fix replying to message with html attachment (#1485676)

2009/02/10 (alec)
----------
- Use default_charset for messages without specified charset (#1485661, #1484961)
- Support non-standard "GMT-XXXX" literal in date header (#1485729)

2009/02/08 (thomasb)
----------
- Added TNEF support to decode MS Outlook attachments (winmail.dat)

2009/02/08 (alec)
----------
- Fix "value continuation" MIME headers by adding required semicolon (#1485727)

2009/02/06 (alec)
----------
- Fix pressing select all/unread multiple times (#1485723)
- Fix selecting all unread does not honor new messages (#1485724)
- Fix some base64 encoded attachments handling (#1485725)

2009/02/05 (alec)
----------
- Support NGINX as IMAP backend: better BAD response handling (#1485720)

2009/02/04 (alec)
----------
- performance fix: don't fetch attachment parts headers twice to parse filename

2009/02/02 (alec)
----------
- Fix checking for recent messages on various IMAP servers (#1485702)
- performance fix: Don't fetch quota and recent messages in "message view" mode
- Fix displaying of alternative-inside-alternative messages (#1485713)

2009/01/28 (alec)
----------
- Fix MDNSent flag checking, use arbitrary keywords (asterisk) flag (#1485706)

2009/01/23 (alec)
----------
- Fix creation of folders with '&' sign in name
- Fix parsing of email addresses without angle brackets (#1485693)